--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=qianfan
 
 # Qianfan
-QIANFAN_ACCESS_KEY=g7lI30AujP5b6vNqz5flZplT
-QIANFAN_SECRET_KEY=zTczNHRLstpvidxczSrxU58Ac02V4LM7
+QIANFAN_ACCESS_KEY=你的AK
+QIANFAN_SECRET_KEY=你的SK
 
 # ServerProperties
 server.port=8080
